# chatty

./: .gitignore  LICENSE  README.md  pyproject.toml
scratch/: test_layout.py
src/chatty/: __main__.py  backup.py  cli.py  commands.py  landlock.py  landlock_exec.c  llm.py  logging_setup.py  runner.py  safety.py  session.py  syntax.py  tools.py  ui.py  utils.py
src/chatty.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/chatty/skills/greetings/: SKILL.md
src/chatty/tools/: __init__.py  file_ops.py  registry.py  schemas.py  search_ops.py  system_ops.py  web_ops.py
tests/: test_backup.py  test_caching_and_repeats.py  test_commands.py  test_cutoff.py  test_format.py  test_gitignore.py  test_headless.py  test_landlock.py  test_logging.py  test_oracle.py  test_safety.py  test_sandbox_ops.py  test_session_persist.py  test_syntax.py  test_thinking_loops.py  test_tool_stats.py  test_tools_modularity.py  test_whitelist.py
